@@ -34,6 +34,7 @@ development and quite unstable...). So you have been warned ;)</p>
 	<li><a href="rsconf1_actionresumeinterval.html">$ActionResumeInterval</a></li>
 	<li>$AddUnixListenSocket &lt;name-of-socket&gt; adds additional unix socket, 
 	default none -- former -a option</li>
+	<li>$ActionResumeRetryCount &lt;number&gt; [default 0, -1 means eternal]</li>
 	<li><a href="rsconf1_allowedsender.html">$AllowedSender</a></li>
 	<li><a href="rsconf1_controlcharacterescapeprefix.html">$ControlCharacterEscapePrefix</a></li>
 	<li><a href="rsconf1_debugprintcfsyslinehandlerlist.html">$DebugPrintCFSyslineHandlerList</a></li>
