@@ -1,5 +1,6 @@
 ---------------------------------------------------------------------------
 Version 3.10.4 (rgerhards), 2008-01-??
+- implemented the $ActionResumeRetryCount config directive
 ---------------------------------------------------------------------------
 Version 3.10.3 (rgerhards), 2008-01-28
 - fixed a bug with standard template definitions (not a big deal) - thanks
